tests/negative/Iterators3.juvix
module Iterators3;

map : {A B : Type} → (A → B) → A → B;
map f x := f x;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

main : Bool;
main := map (x in true) x;
